--- a/websites/landingPage/style.css
+++ b/websites/landingPage/style.css
@@ -1,3 +1,7 @@
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     margin: 0;
@@ -157,11 +161,64 @@ body {
 .projectsTitle {
     font-size: 36px;
     font-weight: bolder;
-    padding: 20px;
+    padding-top: 60px;
+    padding-bottom: 24px;
 }
 
 .projectsCards {
-    padding: 50px;
+    display: flex;
+    justify-content: center;
+    padding: 25px;
+}
+
+.card {
+    margin: 35px;
+}
+
+.card img {
+    width: 200px;
+    height: 200px;
+    border: 6px solid skyblue;
+    border-radius: 32px;
+    box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.7);
+}
+
+.card img:hover {
+    border: 6px solid skyblue;
+    border-radius: 32px;
+    box-shadow: 2px 2px 10px navy;
+}
+
+.card a:hover + .cardText {
+    visibility: visible;
+}
+
+.card img:hover + .cardText {
+    visibility: visible;
+}
+
+.cardText {
+    width: 215px;
+    margin-top: 5px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    flex-flow: row wrap;
+    visibility: hidden;
+}
+
+.cardTitle {
+    font-size: 18px;
+    font-weight: bolder;
+    color: #3882F6;
+}
+
+.cardDescription {
+    font-style: italic;
+    color: #1e2735;
+    width: 170px;
 }
 
 /* quote */
